fix spacing between map and searchbar

--- a/style/style.scss
+++ b/style/style.scss
@@ -122,12 +122,13 @@
   height: 85vh;
 
   .MapContainer{
-    height: 50vw;
+    height: 380px;
     position: relative !important;
   }
 
   .searchbar{
-    padding-top: 55vh;
+    // padding-top: 55vh;
+    padding-top:5px;
     margin: 0px;
     width: 100%;
     margin-right: auto;
@@ -569,6 +570,8 @@ div > form > div.container-fluid > div > table > tbody > tr:last-child{
   padding: 20px;
 }
 
+
+
 .currentorganization-open {
   .container-main{
     margin-top: 100px;
@@ -582,7 +585,6 @@ div > form > div.container-fluid > div > table > tbody > tr:last-child{
     border-width: thin;
     border-color: rgba(25,150,170,0.2);
     padding-right: 14px;
-    padding
   }
 
 
